Search bar position change on mobile. Now fixed  on bottom 0rem.

--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -4,9 +4,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(136, 157, 173, 0.8);
+    background-color: rgba(181, 223, 255, 0.3);
     backdrop-filter: blur(1rem);
     padding: 0 2rem;
+    z-index: 999
 }
 
 .logo {
@@ -48,7 +49,7 @@ input {
 
 input[type=text]:focus{
     padding: 0.5rem 3rem;
-  }
+}
 
 
 button {
@@ -101,11 +102,28 @@ button {
         justify-content: flex-start;   
         height: 4rem;
         padding: 1rem 0;
+        position: fixed;
+        bottom: 0;
+        backdrop-filter: blur(3rem);
+        
    }
 
    .logo {
     display: none;
     }   
 
+    input {
+        padding: 0.4rem 3rem;
+    }
+    
+    input[type=text]:focus{
+        padding: 0.5rem 5rem;
+    }
+
+    .searchHints {
+        top: -250%;
+        left: 10%;
+        width: 80%;
+    }
 
 }
