--- a/src/features/Next/Next.css
+++ b/src/features/Next/Next.css
@@ -81,3 +81,9 @@
         height: 4rem;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .nextContainer {
+        padding-bottom: 6rem;
+    }
+}
